--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,8 @@
-<footer>
+<footer class="footer mt-auto py-3">
   <div class='container'>
     <div class='row'>
       <div class='col-xs-3 col-xs-offset-9'>
-        <p>CopyRight DIGRU.inc</p>
+      <span class="text-muted">CopyRight DIGRU.inc</span>
       </div>
     </div>
   </div>
