--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,1 +1,8 @@
 <h1>products#index</h1>
+
+<!-- 検索フォーム -->
+<%= form_tag(:method => 'get') do %>
+  <%= text_field_tag :search %>
+  <%= submit_tag 'Search', :name => nil %>
+<% end %>
+<!-- 検索フォーム -->
