--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,1 +1,33 @@
-<h1>products#new!</h1>
+<h1>products#new</h1>
+
+<h2> 出品フォーム </h2>
+
+<%= form_for(@post) do |f| %>
+
+  <h4> アーティスト名</h4>
+  <span>※ ログインしているアーティスト名を自動表示 ※</span>
+
+  <h4> シングル/アルバム名</h4>
+  <%= f.text_area :name, class: "" %>
+
+  <h4> 値段</h4>
+  <%= f.text_area :price, class: "" %>
+
+  <h4> レーベル名</h4>
+  <%= f.text_area :label, class: "" %>
+
+  <h4> ジャンル</h4>
+  <%= f.text_area :genre, class: "" %>
+
+  <h4> 曲名</h4>
+  <%= f.text_area :name, class: "" %>
+
+  <h4> 在庫数</h4>
+  <%= f.text_area :stock, class: "" %>
+
+  <h4> 動画URL</h4>
+  <%= f.text_area :movie_url, class: "" %>
+
+  <p><%= f.submit 'Create Book' %></p>
+
+<% end %>
