--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,9 @@
 <h1>products#index</h1>
+<li>
+    <%= link_to destroy_artist_session_path, class: "", method: :delete do %>
+   		<span>logout</span>
+    <% end %>
+</li>
 
 <!-- 検索フォーム -->
 <%= form_tag(:method => 'get') do %>
@@ -7,17 +12,17 @@
 <% end %>
 <!-- 検索フォーム -->
 
+<% flash.each do |key, value| %>
+     <%= content_tag(:div, value, class: "#{key}") %>
+<% end %>
 
 <% @products.each do |product| %>
 
     <%= link_to product_path(product.id), class: "" do %>
-      	<%= attachment_image_tag product, :image, size: "50x50" , format: 'jpeg', fallback: "no_image.jpg", class: "" %>
-        <%= product.name %>
+      	<%= attachment_image_tag product, :image, size: "200x200" , format: 'jpeg', fallback: "no_image.jpg", class: "" %>
     <% end %>
 
-    <%= link_to artist_path(artist.id), class: "" do %>
-    	<%= artist.name %>
-    <% end %>
+    <%= product.name %>
 
     <%= product.price %>
 
