update products#index layout

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -13,18 +13,34 @@
 <% end %>
 <!-- 検索フォーム -->
 
+<!-- スライダー -->
+<div class="slider">スライダー挿入</div>
+<!-- スライダー -->
+
 <!-- 商品一覧 -->
-<% @products.each do |product| %>
-
-	<%= link_to product_path(product.id), class: "" do %>
-   	 	<%= attachment_image_tag product, :image, size: "200x200" , format: 'jpeg', fallback: "no_image.jpg", class: "" %>
-    	<p><%= product.name %></p>
-    <% end %>
-
-    <!-- アーティスト名が登録できるようになったら，email を name に変更し，アーティスト名をクリックしたら artist#show へ飛べるようにする -->
-    <p><%= product.artist.email %></p>
-
-    <p>価格 | ¥<%= product.price %></p>
-
-<% end %>
+<div class="container">
+	<div class="row">
+		<div class="col-xs-8">
+			<div class="product-index">
+				<% @products.each do |product| %>
+					<div class="product-item">
+						<%= link_to product_path(product.id), class: "" do %>
+					   	 	<%= attachment_image_tag product, :image, size: "150x150" , format: 'jpeg', fallback: "no_image.jpg", class: "" %>
+					    	<p><%= product.name %></p>
+					    <% end %>
+					    <!-- アーティスト名が登録できるようになったら，email を name に変更し，アーティスト名をクリックしたら artist#show へ飛べるようにする -->
+					    <p><%= product.artist.email %></p>
+					    <p>価格 | ¥<%= product.price %></p>
+					</div>
+				<% end %>
+			</div>
+		</div>
 <!-- 商品一覧 -->
+
+<!-- ランキング -->
+		<div class="col-xs-4">
+			<div class="ranking" style="background-color: skyblue;">ランキング</div>
+		</div>
+<!-- ランキング -->
+    </div>
+</div>
