--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -2,3 +2,23 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.slider {
+	width: 100%;
+	height: 200px;
+	background-color: orange;
+}
+
+.product-index {
+	margin-top: 50px;
+}
+
+.product-item {
+	float: left;
+	margin: 10px 20px;
+}
+
+.ranking {
+	width: 100%;
+	height: 1024px;
+}
+
