update products#show layout

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -18,7 +18,7 @@
 <!-- スライダー -->
 
 <!-- 商品一覧 -->
-<div class="container">
+<div class="container"> <!-- デフォルトで,class="container"にmarginが設定されているので，両サイドに空白ができている-->
 	<div class="row">
 		<div class="col-xs-8">
 			<div class="product-index">
@@ -39,7 +39,7 @@
 
 <!-- ランキング -->
 		<div class="col-xs-4">
-			<div class="ranking" style="background-color: skyblue;">ランキング</div>
+			<div class="ranking">ランキング</div>
 		</div>
 <!-- ランキング -->
     </div>
