--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -2,6 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+/* index */
+
 .slider {
 	width: 100%;
 	height: 200px;
@@ -14,11 +16,47 @@
 
 .product-item {
 	float: left;
-	margin: 10px 20px;
+	margin: 10px 30px 10px 0px;
 }
 
 .ranking {
 	width: 100%;
 	height: 1024px;
+	background-color: skyblue;
+}
+
+/* show */
+
+.product-information {
+	width: 100%;
+	height: 300px;
+	background-color: yellow;
+}
+
+.product-image {
+	float: left;
+}
+
+.product-informarion-text {
+	float: left;
+	padding-left: 30px;
+}
+
+.product-detailed-information {
+	width: 100%;
+	height: 300px;
+	background-color: green;
+}
+
+.show-sidebar{
+	width: 100%;
+	height: 1024px;
+	background-color: pink;
+}
+
+.comment{
+	width: 100%;
+	height: 300px;
+	background-color: orange;
 }
 
