--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -27,10 +27,18 @@
 
 /* show */
 
+.border1 {
+	width: 100%;
+	height: 30px;
+	color: white;
+	background-color: black;
+}
+
 .product-information {
 	width: 100%;
 	height: 300px;
 	background-color: yellow;
+	padding:20px 0px 0px 20px;
 }
 
 .product-image {
@@ -40,6 +48,13 @@
 .product-informarion-text {
 	float: left;
 	padding-left: 30px;
+}
+
+.border2 {
+	width: 100%;
+	height: 30px;
+	color: white;
+	background-color: black;
 }
 
 .product-detailed-information {
@@ -52,6 +67,13 @@
 	width: 100%;
 	height: 1024px;
 	background-color: pink;
+}
+
+.border3 {
+	width: 100%;
+	height: 30px;
+	color: white;
+	background-color: black;
 }
 
 .comment{
