commit to change a branch

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,8 +26,7 @@
         <%= link_to " login", "/users/sign_in", class: 'glyphicon glyphicon-log-in sign_in' %>
       </li>
       <li>
-        <%= link_to " artists", "#{}", class: 'glyphicon glyphicon-headphones
- artists' %>
+        <%= link_to " artists", "#{}", class: 'glyphicon glyphicon-headphones artists' %>
       </li>
       <li>
         <%= link_to " help", "#{}", class: 'glyphicon glyphicon-question-sign help' %>
