product show update

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -16,7 +16,7 @@
 				<div class="product-informarion-text">
 					<p>商品情報：</p>
 					<p><%= @product.name%> </p> <!-- 本当はアーティスト名 -->
-					<p>/<%= @product.artist.email%></p>
+					<p><%= @product.artist.name%></p>
 					<p>ジャンル：<%= @product.genre%></p>
 					<p>レーベル：<%= @product.label%></p>
 					<p>在庫数：<%= @product.stock%></p>
