--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Artists#index</h1>
 
 <% @artists.each do|artist| %>
-	<%= link_to "show", artist_path(artist.id) %>
+	<%= link_to artist.name, artist_path(artist.id) %>
 <% end %>
