--- a/app/views/artists/registrations/new.html.erb
+++ b/app/views/artists/registrations/new.html.erb
@@ -19,6 +19,11 @@
   </div>
 
   <div class="field">
+    <%= f.label :member %><br />
+    <%= f.text_field :member %>
+  </div>
+
+  <div class="field">
     <%= f.label :postal_code %><br />
     <%= f.text_field :postal_code %>
   </div>
