--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -29,7 +29,7 @@
 					    	<p><%= product.name %></p>
 					    <% end %>
 					    <!-- アーティスト名が登録できるようになったら，email を name に変更し，アーティスト名をクリックしたら artist#show へ飛べるようにする -->
-					    <p><%= product.artist.email %></p>
+					    <p><%= product.artist.name %></p>
 					    <p>価格 | ¥<%= product.price %></p>
 					</div>
 				<% end %>
