--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -3,6 +3,12 @@
 <p><%= @artist.name %></p>
 <p><%= @artist.member %></p>
 
+<% if @artist == current_artist %>
+	<p><%= link_to "New Product", new_product_path %>
+	 | <%= link_to "Artist Edit", edit_artist_path(@artist.id) %> | 
+<% end %>
+<%= link_to "Logout", destroy_artist_session_path, method: :delete %></p>
+
 <!-- 以下出品一覧 -->
 <% @products.each do |product| %>
 	<%= link_to product_path(product.id) do %>
@@ -12,7 +18,6 @@
 			<p><%= product.artist.name %></p>
 			<p>価格 | ¥<%= product.price %></p>
 <% end %>
+<!-- ここまで -->
 
-<%= link_to "Edit", edit_artist_path(@artist.id) %><br>
-<%= link_to "New Product", new_product_path %><br>
-<%= link_to "Logout", destroy_artist_session_path, method: :delete %>
+
