--- a/app/views/admins/user_index.html.erb
+++ b/app/views/admins/user_index.html.erb
@@ -5,29 +5,31 @@
 	<%= submit_tag 'Search', :name => nil  %>
 <% end %>
 
+
+<table class='table table-hover table-inverse'>
+  <thead>
+    <tr>
+      <th>image</th>
+      <th>id</th>
+      <th>name</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+<tbody>
 <% @users.each do |user| %>
-<ul class="users">
-	email : <%= user.email %>
-</ul>
-<ul class="users">
-	name : <%= user.name %>
-</ul>
-<ul class="users">
-	name_kana : <%= user.name_kana %>
-</ul>
-<ul class="users">
-	hundle_name : <%= user.hundle_name %>
-</ul>
-<ul class="users">
-	postal_code : <%= user.postal_code %>
-</ul>
-<ul class="users">
-	user_address : <%= user.user_address %>
-</ul>
-<ul class="users">
-	phone_number : <%= user.phone_number %>
-</ul>
-<ul class="users">
-	created_at : <%= user.created_at %>
-</ul>
+<tr>
+  <td>
+	<%= attachment_image_tag user, :profile_image, :fill, 40, 40, fallback: "sample-author1.jpg" %>
+  </td>
+  <td>
+	id : <%= user.id %>
+  </td>
+  <td>
+	id : <%= user.name %>
+  </td>
+  <td>
+<%= link_to "Show", user_path(user.id), class: "user_#{user.id}" %>
+  </td>
 <% end %>
+</tbody>
+</table>
