add button to link to a page of select addresses

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -46,7 +46,8 @@
     </div>
     <div class="col-xs-4">
       <div class="show-sidebar">
-        購入ボタン・送付先変更ボタン
+        <p><%= link_to '購入手続きへ', users_address_path, class: "btn btn-primary" %><p>
+        <p>※ご注文内容確認画面（配送先指定等）へ遷移します．</p>
       </div>
     </div>
   </div>
