--- a/app/views/admins/user_index.html.erb
+++ b/app/views/admins/user_index.html.erb
@@ -5,7 +5,6 @@
 	<%= submit_tag 'Search', :name => nil  %>
 <% end %>
 
-
 <table class='table table-hover table-inverse'>
   <thead>
     <tr>
@@ -33,3 +32,5 @@
 <% end %>
 </tbody>
 </table>
+
+<%= paginate @users, class: "paginate" %>
