add artist_index search

--- a/app/views/artists/edit.html.erb
+++ b/app/views/artists/edit.html.erb
@@ -3,9 +3,10 @@
 	<%= form_for(@artist) do |f| %>
 		<p>Name<%= f.text_field :name, class: "" %></p>
 		<p>Name<%= f.text_field :name_kana, class: "" %></p>
+    	<p>image<%= f.attachment_field :profile_image %>
 		<p>Member<%= f.text_field :member, class: "" %></p>
 		<p>Postal code<%= f.text_field :postal_code, class: "" %></p>
 		<p>Phone number<%= f.text_field :phone_number, class: "" %></p>
 		<p>Mail<%= f.text_field :email, class: "" %></p>
 		<%= f.submit "Update Artist" %>
-	<% end %>
+	<% end %> 
