--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Artists#index</h1>
 
 <p>アーティスト検索</p>
-<%= form_tag("index", :method => 'get' ) do %>
+<%= form_tag("/artists/index", :method => 'get' ) do %>
 	<%= text_field_tag :search, params[:search] %>
 	<%= submit_tag 'Search', :name => nil  %>
 <% end %>
