--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -27,7 +27,22 @@
 				<p><%= link_to "トップへ", products_path, class: "" %></p>
 				<p><%= link_to "Edit", edit_product_path(@product), class: "" %></p>
 				<p><%= link_to "Destroy", product_path(@product), class: "", method: :delete, "data-confirm" => "Are you sure?" %></p>
+
+<!-- いいね機能 -->
+<% if @product.favorited_by?(current_user) %>
+    <%= link_to product_favorites_path(@product), method: :delete do %>
+      <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+      <%= @product.favorites.count %> いいね
+    <% end %>
+<% else %>
+    <%= link_to product_favorites_path(@product), method: :post do %>
+      <i class="fa fa-heart-o" aria-hidden="true"></i>
+      <%= @product.favorites.count %> いいね
+    <% end %>
+  </li>
+<% end %>
 			</div>
+<!-- いいね機能 -->
 			<!-- 商品の基本情報 -->
 
 			<!-- 商品の詳細情報 -->
