--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,10 +7,11 @@
 </li>
 
 <!-- 検索フォーム -->
-<%= form_tag(:method => 'get') do %>
-  <%= text_field_tag :search %>
-  <%= submit_tag 'Search', :name => nil %>
+<%= form_tag("/artists/index", :method => 'get' ) do %>
+	<%= text_field_tag :search, params[:search], placeholder:"アーティスト名で検索" %>
+	<%= submit_tag 'Search', :name => nil  %>
 <% end %>
+<br>
 <!-- 検索フォーム -->
 
 <!-- スライダー -->
