--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -22,21 +22,20 @@
 					<p>ジャンル：<%= @product.genre%></p>
 					<p>レーベル：<%= @product.label%></p>
 					<p>在庫数：<%= @product.stock%></p>
+					<!-- いいね機能 -->
+					<% if @product.favorited_by?(current_user) %>
+				    <%= link_to product_favorites_path(@product), method: :delete do %>
+    	 			 <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>　お気に入りに入れる
+ 					   <% end %>
+					<% else %>
+				    <%= link_to product_favorites_path(@product), method: :post do %>
+			    	  <i class="fa fa-heart" aria-hidden="true"></i>
+			    	  	お気に入りから外す
+				    <% end %>
+					  </li>
+					<% end %>
+					<!-- いいね機能 -->
 				</div>
-				<!-- いいね機能 -->
-				<% if @product.favorited_by?(current_user) %>
-			    <%= link_to product_favorites_path(@product), method: :delete do %>
-     			 <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
-			      <%= @product.favorites.count %> いいね
- 				   <% end %>
-				<% else %>
-			    <%= link_to product_favorites_path(@product), method: :post do %>
-			      <i class="fa fa-heart-o" aria-hidden="true"></i>
-			      <%= @product.favorites.count %> いいね
-			    <% end %>
-				  </li>
-				<% end %>
-				<!-- いいね機能 -->
 
 				<p><%= link_to "トップへ", products_path, class: "" %></p>
 				<p><%= link_to "Edit", edit_product_path(@product), class: "" %></p>
