--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -23,12 +23,12 @@
 					<p>レーベル：<%= @product.label%></p>
 					<p>在庫数：<%= @product.stock%></p>
 					<!-- いいね機能 -->
-					<% if @product.favorited_by?(current_user) %>
-				    <%= link_to product_favorites_path(@product), method: :delete do %>
+					<% if !@product.favorited_by?(current_user) %>
+				    <%= link_to product_favorites_path(@product), method: :post do %>
     	 			 <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>　お気に入りに入れる
  					   <% end %>
 					<% else %>
-				    <%= link_to product_favorites_path(@product), method: :post do %>
+				    <%= link_to product_favorites_path(@product), method: :delete do %>
 			    	  <i class="fa fa-heart" aria-hidden="true"></i>
 			    	  	お気に入りから外す
 				    <% end %>
