--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -23,6 +23,7 @@
 					<p>レーベル：<%= @product.label%></p>
 					<p>在庫数：<%= @product.stock%></p>
 					<!-- いいね機能 -->
+					<% if user_signed_in? %>
 					<% if !@product.favorited_by?(current_user) %>
 				    <%= link_to product_favorites_path(@product), method: :post do %>
     	 			 <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>　お気に入りに入れる
@@ -33,6 +34,9 @@
 			    	  	お気に入りから外す
 				    <% end %>
 					  </li>
+					<% end %>
+					<% else %>
+					お気に入りの数
 					<% end %>
 					<!-- いいね機能 -->
 				</div>
