Product new update

--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -4,7 +4,7 @@
 
 <!--後でemailをname(ログインしているアーティスト名に変更)-->
 <h4> アーティスト名</h4>
-<%= current_artist.email%>
+<%= current_artist.name%>
 
 <%= form_for(@product) do |f| %>
 
