--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,31 +12,75 @@
 <header class="navbar navbar-default">
   <div class="container">
     <nav class="nav navbar-nav navbar-left">
-      <span class="title"><h3>DIGRU</h3></span>
+      <span class="title">
+        <h1><%= link_to products_path do %>DIGRU<% end %></h1>
+      </span>
     </nav>
+
     <nav>
+      <% if user_signed_in? %>
       <ul class="nav navbar-nav navbar-right">
+        <p>こんにちは　<%= current_user.name %>さん</p>
+        <li>
+          <%= link_to "カート", {controller: :carts, action: :show, id: :cart_empty}, class: "glyphicon glyphicon-shopping-cart cart" %>
+        </li>
+        <li>
+        <li>
+          <%= link_to "マイページ", user_path(current_user.id), class: 'glyphicon glyphicon-home' %>
+        </li>
+        <li>
+          <%= link_to "アーティスト一覧", artists_path, class: 'glyphicon glyphicon-headphones artists' %>
+        </li>
+        <li>
+          <%= link_to "FAQ", users_help_path, class: 'glyphicon glyphicon-question-sign help' %>
+        </li>
+        <li>
+          <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'glyphicon glyphicon-log-out logout' %>
+        </li>
+      </ul>
+
+      <% elsif artist_signed_in? %>
+
+      <ul class="nav navbar-nav navbar-right">
+        <p>こんにちは　<%= current_artist.name %>さん</p>
+        <li>
+          <%= link_to "商品を出品する", new_product_path, class: 'glyphicon glyphicon-bell sell' %>
+        </li>
+        <li>
+        <li>
+          <%= link_to "マイページ", artist_path(current_artist.id), class: 'glyphicon glyphicon-log-in sign_in' %>
+        </li>
+        <li>
+          <%= link_to "アーティスト一覧", artists_path, class: 'glyphicon glyphicon-headphones artists' %>
+        </li>
+        <li>
+          <%= link_to "FAQ", users_help_path, class: 'glyphicon glyphicon-question-sign help' %>
+        </li>
+        <li>
+          <%= link_to "ログアウト", destroy_artist_session_path, method: :delete, class: 'glyphicon glyphicon-log-out logout' %>
+        </li>
+      </ul>
+
+      <% else %>
+
+        <ul class="nav navbar-nav navbar-right">
         <p>こんにちは　ゲストさん</p>
-      <li>
-      </li>
-      <li>
-        <%= link_to " sign up", "/users/sign_up", class: 'glyphicon glyphicon-edit sign_up' %>
-      </li>
-      <li>
-      <li>
-        <%= link_to " login", "/users/sign_in", class: 'glyphicon glyphicon-log-in sign_in' %>
-      </li>
-      <li>
-        <%= link_to " artists", artists_path, class: 'glyphicon glyphicon-headphones
- artists' %>
-      </li>
-      <li>
-        <%= link_to " help", "#{}", class: 'glyphicon glyphicon-question-sign help' %>
-      </li>
-      <li>
-        <%= link_to " logout", destroy_artist_session_path, method: :delete, class: 'glyphicon glyphicon-log-out logout' %>
-      </li>
-    </ul>
+        <li>
+          <%= link_to "ログイン", users_session_select_path, class: 'glyphicon glyphicon-log-in sign-in' %>
+        </li>
+        <li>
+          <%= link_to "会員登録", users_registration_select_path, class: 'glyphicon glyphicon-edit sign_up' %>
+        </li>
+        <li>
+          <%= link_to "アーティスト一覧", artists_path, class: 'glyphicon glyphicon-headphones artists' %>
+        </li>
+        <li>
+          <%= link_to "FAQ", users_help_path, class: 'glyphicon glyphicon-question-sign help' %>
+        </li>
+      </ul>
+
+      <% end %>
+
     </nav>
   </div>
 </div>
