--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,19 +1,3 @@
-
-<h1>products#index</h1>
-<li>
-    <%= link_to destroy_artist_session_path, class: "", method: :delete do %>
-   		<span>logout</span>
-    <% end %>
-</li>
-
-<!-- 検索フォーム -->
-<%= form_tag("/artists/index", :method => 'get' ) do %>
-	<%= text_field_tag :search, params[:search], placeholder:"アーティスト名で検索" %>
-	<%= submit_tag 'Search', :name => nil  %>
-<% end %>
-<br>
-<!-- 検索フォーム -->
-
 <!-- スライダー -->
 <div class="slider">スライダー挿入</div>
 <!-- スライダー -->
@@ -32,6 +16,7 @@
 					    <!-- アーティスト名が登録できるようになったら，email を name に変更し，アーティスト名をクリックしたら artist#show へ飛べるようにする -->
 					    <p><%= product.artist.name %></p>
 					    <p>価格 | ¥<%= product.price %></p>
+					    <p>在庫数：<%= product.stock %></p>
 					</div>
 				<% end %>
 			</div>
