--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -78,23 +78,22 @@
 			<!-- コメント投稿用フォーム -->
 		</div>
 		<div class="col-xs-4">
-			<div class="show-sidebar">ユーザーなら「カートに入れるボタン」「数量変更増減矢印」「小計」，アーティストなら「商品編集ボタン」
+			<div class="show-sidebar">
 				<% if @cart_item.errors %>
 					<% @cart_item.errors.full_messages.each do |e| %>
 						<%= e %>
 					<% end %>
 				<% end %>
-				<!-- 一般ユーザ用 -->
+				<% if user_signed_in? %>
 		    	<%= form_for @cart_item do |f| %>
 		    		<%= f.hidden_field :product_id, value: @product.id %>
 		    		<%= f.hidden_field :price, value: @product.price %>
 		    		<p>数量: <%= f.number_field :quantity, value: @cart_item.quantity.to_i, min: 1, max: 99%></p>
-		    		<p><%= f.submit "カートに入れる ※ for user", class: "btn btn-primary" %></p>
+		    		<p><%= f.submit "カートに入れる", class: "btn btn-primary" %></p>
 		    	<% end %>
-		    	<!-- 一般ユーザ用 -->
-		    	<!-- アーティスト用 -->
-		    	<%= link_to "商品情報編集　※ for artist", edit_product_path(@product), class: "btn btn-primary" %>
-		    	<!-- アーティスト用 -->
+		    	<% else %>
+		    	<%= link_to "商品情報編集", edit_product_path(@product), class: "btn btn-primary" %>
+		    	<% end %>
 		    </div>
 		</div>
 	</div>
