--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -22,17 +22,17 @@
   <h4> シングル/アルバム名</h4>
   <%= f.text_field :name, class: "" %>
 
-  <%= f.fields_for :disk_number do |disknumber| %>
+  <%= f.fields_for :disc_numbers do |discnumber| %>
     
     <h4> 枚数</h4>
-    <%= disknumber.text_field :disc_name, class: "" %>
+    <%= discnumber.text_field :disc_name, class: "" %>
 
-      <%= disknumber.fields_for :music do |music| %>
+      <%= discnumber.fields_for :musics do |music| %>
 
         <h4>曲名</h4>
         <%= music.text_field :name %>
         <h4>順番</h4>
-        <%= music.text_field :track_number %>
+        <%= music.text_field :truck_number %>
 
       <% end %>
   <% end %>
