--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -11,7 +11,7 @@
 }
 
 .product-index {
-	margin-top: 50px;
+	margin-top: 30px;
 }
 
 .product-item {
@@ -21,8 +21,80 @@
 
 .ranking {
 	width: 100%;
-	height: 1024px;
-	background-color: skyblue;
+	height: 1120px;
+	margin-top: 30px;
+	border: solid 0.8px lightgray;
+	h4 {
+		text-align: center;
+		padding: 20px 0px;
+		margin-top: 0px;
+		border-bottom: solid 0.8px lightgray;
+		background-color: #DDF7FC;
+	}
+}
+
+#sold_out {
+	color: red;
+}
+
+.ranking_rank {
+	float: left;
+	width: 20%;
+	font-size: 20px;
+	background-color: 1;
+	padding-top: 20px;
+	margin-top: -10px;
+	border-right: dashed 0.8px lightgray;
+	list-style: none;
+	text-align: center;
+
+	li:nth-child(1) {
+		padding-top: 5px;
+	}
+	li:nth-child(n+2) {
+		padding-top: 40px;
+	}
+	li:nth-child(7) {
+		padding-top: 65px;
+	}
+	li:nth-child(n+8) {
+		padding-top: 78px;
+	}
+}
+
+.rank1 {
+	width: 50%;
+	height: 50%;
+	background-color: #FFF;
+	border-radius: 100%;
+	border: solid 0.5px #e6b422;
+}
+.rank2 {
+	width: 50%;
+	height: 50%;
+	background-color: #FFF;
+	border-radius: 100%;
+	border: solid 0.5px #C0C0C0;
+}
+.rank3 {
+	width: 50%;
+	height: 50%;
+	background-color: #FFF;
+	border-radius: 100%;
+	border: solid 0.5px #C47022;
+}
+
+.ranking_box {
+	float: left;
+	width: 80%;
+	padding-top: 20px;
+	margin-top: -10px;
+}
+
+.ranking_item {
+	width: 80%;
+	padding-bottom: 25px;
+	margin: 0 auto;
 }
 
 /* show */
