--- a/app/views/admins/user_history.html.erb
+++ b/app/views/admins/user_history.html.erb
@@ -25,10 +25,10 @@
 	<%= history.product.name %>
   </td>
   <td>
-  	<%= history.price %>
+  <%= history.price %>
   </td>
   <td>
-  	送付先
+  <%= history.cart.address_id %>
   </td>
   <td>
   	ステータス
