--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,3 +1,12 @@
+
+<!-- 検索機能 -->
+<p>商品検索</p>
+<%= form_tag("/products/index", :method => 'get' ) do %>
+	<%= text_field_tag :search, params[:search] %>
+	<%= submit_tag 'Search', :name => nil  %>
+<% end %>
+<!-- 検索機能 -->
+
 <!-- スライダー -->
 <div class="slider">スライダー挿入</div>
 <!-- スライダー -->
@@ -16,7 +25,11 @@
 					    <!-- アーティスト名が登録できるようになったら，email を name に変更し，アーティスト名をクリックしたら artist#show へ飛べるようにする -->
 					    <p><%= product.artist.name %></p>
 					    <p>価格 | ¥<%= product.price %></p>
-					    <p>在庫数：<%= product.stock %></p>
+					    <% if product.stock > 1 %>
+						<p>在庫数：<%= product.stock%></p>
+						<% else %>
+							<p> ❌ Sold out </p>
+						<% end %>
 					</div>
 				<% end %>
 			</div>
@@ -25,7 +38,36 @@
 
 <!-- ランキング -->
 		<div class="col-xs-4">
-			<div class="ranking">ランキング</div>
+			<div class="ranking">
+				<h4> 売れ筋ランキング（過去10日間）</h4>
+				<div class="ranking_rank">
+					<li>1</li>
+					<%= image_tag 'rank1.png', class:"rank1" %>
+					<li>2</li>
+					<%= image_tag 'rank2.png', class:"rank2" %>
+					<li>3</li>
+					<%= image_tag 'rank3.png', class:"rank3" %>
+					<li>4</li>
+					<li>5</li>
+					<li>6</li>
+					<li>7</li>
+					<li>8</li>
+					<li>9</li>
+					<li>10</li>
+				</div>
+				<div class="ranking_box">
+					<% @test.each_key do |key| %>
+					    <% products = Product.find_by(id: key) %>
+					    <div class="ranking_item">
+						    <%= link_to product_path(products) do %>
+						    	<%= attachment_image_tag products, :image, :fill, 80, 80, format: 'jpeg', fallback: "no_image.jpg" %>
+							    <%= products.name %>
+							   	/<%= products.artist.name %>
+							<% end %>
+						</div>
+				    <% end %>
+				</div>
+			</div>
 		</div>
 <!-- ランキング -->
     </div>
