--- a/app/views/admins/user_history.html.erb
+++ b/app/views/admins/user_history.html.erb
@@ -1,4 +1,4 @@
-<h1>Admins#history!</h1>
+<h1>ユーザー購入履歴一覧</h1>
 
 <table class='table table-hover table-inverse'>
   <thead>
@@ -28,10 +28,12 @@
   <%= history.price %>
   </td>
   <td>
-  <%= history.cart.address_id %>
+  <%= history.cart.address.other_postal_code %><br>
+  <%= history.cart.address.other_address %><br>
+  <%= history.cart.address.other_name %>
   </td>
   <td>
-  	ステータス
+  	<%= history.cart.status %>
   </td>
 <% end %>
 </tbody>
