--- a/app/views/admins/user_history.html.erb
+++ b/app/views/admins/user_history.html.erb
@@ -19,7 +19,7 @@
 	<%= history.cart.user.name %>
   </td>
   <td>
-	<%= history.cart.created_at %>
+	<%= history.cart.added_at %>
   </td>
   <td>
 	<%= history.product.name %>
